[project]
name = "vulnermcp"
version = "0.1.0"
description = "MCP servers aim to vulnerability research and exploit development."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.13.1",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "pyyaml>=6.0.2",
    "yara-python>=4.5.4",
    "llvmlite>=0.44.0"
]
