[project]
name = "vulnermcp"
version = "0.0.2"
description = "MCP servers aim to vulnerability research and exploit development."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.13.1",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "pyyaml>=6.0.2",
    "yara-python>=4.5.4",
    "llvmlite>=0.44.0",
    "httpx>=0.28.1",
    "ohre @ file:///Users/koki/git_space/MCP/VulnerMCP/tools/ohre-0.1.dev70+g4e8ef0d10-py3-none-any.whl",
    "asyncio>=4.0.0",
    "aiofiles>=24.1.0",
    "pendulum>=3.1.0",
    "pathlib>=1.0.1",
    "pathspec>=0.12.1",
    "python-magic>=0.4.27",
]

[dependency-groups]
dev = ["httpx>=0.28.1"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ArkTS*"]
exclude = ["tmp_*"]

[tool.setuptools.package-data]
"ArkTS" = ["*.json", "*.txt", "*.yaml"]
